syntax = "proto3";
package section.v1;
import "article/v1/article.proto";

option java_multiple_files = true;
option java_package = "de.stroeer.section.v1";

message GetSectionResponse {
  repeated article.v1.Article article = 1;
}

message GetSectionRequest {
  string section_path = 1;
}

service SectionService {
  rpc GetSection (GetSectionRequest) returns (GetSectionResponse) {}
}
