syntax = "proto3";

package stroeer.web.article.v1;

import "stroeer/web/article/v1/web_article.proto";

option go_package = "github.com/stroeer/tapir/go/stroeer/web/article/v1;article";
option java_multiple_files = true;
option java_package = "de.stroeer.web.article.v1";

// Service to manage web articles
service WebArticleService {
  // Returns an Article page including all (SEO) relevant information to
  // render an Article with the given id as canonical web or AMP
  rpc GetWebArticlePage (GetWebArticlePageQuery) returns (WebArticlePage) {}
}

message GetWebArticlePageQuery {
  string id = 1;
}

message WebArticlePage {
  WebArticle web_article = 1;
  repeated RelatedWebArticle related_web_articles = 2;
}

